[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
r2r = "0.7.0"
