[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
r2r = "0.7.0"
